Se le da estilo a la página

--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,9 @@
+/* IMPORTAR FUENTES DE GOOGLE FONTS */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap');
+
 body {
   background-color: #F2F2F2;
+  font-family: 'Poppins', sans-serif;
 }
 
 .container {
